# anyrobo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
anyrobo/: __init__.py  assistant.py  bot_handler.py  cli.py
anyrobo/brain/: llm_handler.py
anyrobo/models/: __init__.py  loader.py
anyrobo/speech/: recognition.py  stt_handler.py  synthesis.py  tts_handler.py
anyrobo/ui/: __init__.py  animations.py  components.py  graphical_ui.py  jarvis_ui.py  themes.py  ui_handler.py  visualizers.py
anyrobo/utils/: __init__.py  audio.py  events.py
docs/: interfaces.md
examples/: basic_assistant.py  glados_assistant.py  jarvis.py  jarvis_assistant.py  test_assistant.py  test_llm.py  test_llm_tts.py  test_stt.py  test_tts.py
tests/: test_assistant.py
